@@ -1,3 +1,4 @@
+Build a Fraction: Shapes: Randomly use pies or bars instead of preferring one for large denominators
 Build a Fraction: Shapes: Removed extra 1/2 pieces from level 4 when building halves
 Build a Fraction: Shapes: Made internal divisions (dotted lines) go back to 1 when going into toolbox
 Build a Fraction: Shapes: For levels 8-10, made number of containers go back to 1 when going into toolbox
